@@ -45,7 +45,6 @@ import de.schlund.pfixxml.XMLException;
 
 public class DefaultIWrapperState extends StateImpl implements IWrapperState, RequestTokenAwareState {
 
-    private final static String DEF_FINALIZER     = "de.schlund.pfixcore.workflow.app.ResdocSimpleFinalizer";
     private IHandlerContainer handlerContainer;
 
     /**
@@ -82,7 +81,6 @@ public class DefaultIWrapperState extends StateImpl implements IWrapperState, Re
     public ResultDocument getDocument(Context context, PfixServletRequest preq) throws Exception {
         CAT.debug("[[[[[ " + context.getCurrentPageRequest().getName() + " ]]]]]");
         
-        ResdocFinalizer rfinal = getResdocFinalizer(context);
         ResultDocument  resdoc = new ResultDocument();
       
         IWrapperContainer wrp_container =  getIHandlerContainer().createIWrapperContainerInstance(context, preq, resdoc);
@@ -106,7 +104,6 @@ public class DefaultIWrapperState extends StateImpl implements IWrapperState, Re
                         context.addPageMessage(CoreStatusCodes.FORM_TOKEN_INVALID, null, null);
                         if (errorPage.equals("")) {
                             wrp_container.retrieveCurrentStatus(false);
-                            rfinal.onWorkError(wrp_container);
                             context.prohibitContinue();
                         } else {
                             context.setJumpToPage(errorPage);
@@ -121,7 +118,6 @@ public class DefaultIWrapperState extends StateImpl implements IWrapperState, Re
                 if (stateConf != null && stateConf.requiresToken()) {
                     context.addPageMessage(CoreStatusCodes.FORM_TOKEN_MISSING, null, null);
                     wrp_container.retrieveCurrentStatus(false);
-                    rfinal.onWorkError(wrp_container);
                     context.prohibitContinue();
                     valid = false;
                 }
@@ -132,14 +128,12 @@ public class DefaultIWrapperState extends StateImpl implements IWrapperState, Re
 
                 if (wrp_container.errorHappened()) {
                     CAT.debug("    => Can't continue, as errors happened during load/work.");
-                    rfinal.onWorkError(wrp_container);
                     context.prohibitContinue();
                 } else {
                     CAT.debug("    => No error happened during work... end of submit reached successfully.");
                     CAT.debug("    => retrieving current status.");
                     wrp_container.retrieveCurrentStatus(false);
 
-                    rfinal.onSuccess(wrp_container);
                 }
             }
         } else if (isDirectTrigger(context, preq) || isPageFlowRunning(context)) {
@@ -153,7 +147,6 @@ public class DefaultIWrapperState extends StateImpl implements IWrapperState, Re
                     CAT.debug("    => REASON: WorkFlow");
                 }
             }
-            rfinal.onRetrieveStatus(wrp_container);
             context.prohibitContinue();
         } else {
             throw new XMLException("This should not happen: No submit trigger, no direct trigger, no final page and no workflow???");
@@ -191,24 +184,6 @@ public class DefaultIWrapperState extends StateImpl implements IWrapperState, Re
         this.handlerContainer = handlerContainer;
     }
     
-    // Remember, a ResdocFinalizer is a flyweight!!!
-    protected ResdocFinalizer getResdocFinalizer(Context context) throws XMLException {
-        StateConfig config = getConfig();
-        Class<? extends ResdocFinalizer> clazz = config.getFinalizer();
-        String classname = DEF_FINALIZER;
-        if (clazz != null) {
-            classname = clazz.getName();
-        }
-
-        ResdocFinalizer fin = ResdocFinalizerFactory.getInstance().getResdocFinalizer(classname);
-
-        if (fin == null) {
-            throw new RuntimeException("No finalizer found: classname = " + classname);
-        }
-
-        return fin;
-    }
-
     public Map<String, ? extends IWrapperConfig> getIWrapperConfigMap() {
         return getConfig().getIWrappers();
     }
