@@ -1,5 +1,7 @@
 2009-08-07  Sebastian Marsching <sebastian.marsching@1und1.de>
 
+	Removed "ResdocFinalizer".
+
 	Added extension point support for input wrappers.
 
 	Removed PropertyObjectManager.
